--- a/my-app/src/components/resultPage/ResultPage.css
+++ b/my-app/src/components/resultPage/ResultPage.css
@@ -1,150 +1,141 @@
-@font-face {
-    font-family: "Ferry";
-    src: url(../../fonts/ferry_black.otf);
-  }
-  @font-face {
-    font-family: "Inter";
-    src: url(../..//fonts/Inter-VariableFont_slnt\,wght.ttf);
-  }
-  
-  .result-page {
+.result-page {
     flex-grow: 1;
-  }
-  
-  .result-page__container {
+}
+
+.result-page__container {
     padding: 3em;
-  }
-  
-  .result-page__top-container {
+}
+
+.result-page__top-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-  
-  .result-page__title-box {
+}
+
+.result-page__title-box {
     padding-top: 1em;
     padding-right: 5em;
-  }
-  
-  .result-page__title {
+}
+
+.result-page__title {
     color: #000;
-    font-family: "Ferry";
+    font-family: ferry_black;
     font-size: 40px;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
     letter-spacing: 1.6px;
-  }
-  
-  .result-page__subtitle {
-    padding-top: 2em;
-    padding-right: 12em;
-  
+}
+
+.result-page__subtitle {
+    /* padding-top: 2em; */
+    /* padding-right: 12em; */
+    border:1px solid green;
     color: #000;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.4px;
-  }
-  
-  .result-page__mid-title {
+}
+
+.result-page__mid-title {
     color: #000;
-    font-family: "Ferry";
+    font-family: ferry_black;
     font-size: 30px;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
     letter-spacing: 0.6px;
-  }
-  
-  .result-page__mid-container {
+}
+
+.result-page__mid-container {
     margin-bottom: 3em;
-  }
-  
-  .result-page__result-subtitle {
+}
+
+.result-page__result-subtitle {
     color: #949494;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.36px;
-  }
-  
-  .result-page__cards-container {
+}
+
+.result-page__cards-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-  }
-  
-  .result-page__icon {
-    width: 45%;
-  }
-  
-  .result-page__button-box {
+}
+
+/* .result-page__icon {
+    width: 100%;
+} */
+
+.result-page__button-box {
     display: flex;
     justify-content: center;
-  }
-  
-  .result-page__button {
+}
+
+.result-page__button {
     padding: 0.5em 2em;
     border-color: #5970ff;
     background-color: #5970ff;
     color: #fff;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.88px;
-  }
-  
-  .result-page__button:hover {
+}
+
+.result-page__button:hover {
     background-color: #5970ff;
     border-color: #5970ff;
     background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
-  }
-  
-  /*DOCUMENT-CARD*/
-  
-  .result-card {
+}
+
+/*DOCUMENT-CARD*/
+
+.result-card {
     max-width: 41em;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
     padding: 0.5em;
     margin-bottom: 1em;
-  }
-  
-  .result-card__head {
+}
+
+.result-card__head {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
-  
-  .result-card__head-text {
+}
+
+.result-card__head-text {
     color: #949494;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.32px;
-  }
-  
-  .result-card__title {
+}
+
+.result-card__title {
     color: #000;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 26px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.52px;
-  }
-  
-  .result-card__tag {
+}
+
+.result-card__tag {
     max-width: 13em;
     border-radius: 5px;
     background: #ffb64f;
@@ -152,126 +143,130 @@
     text-align: center;
     color: #000;
     font-size: 12px;
-  }
-  
-  .result-card__text {
+}
+
+.result-card__text {
     color: #000;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.32px;
     opacity: 0.5;
-  }
-  
-  .result-card__footer {
+}
+
+.result-card__footer {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-  }
-  
-  .result-card-button {
+}
+
+.result-card-button {
     padding: 0.5em 2em;
     background: #7ce3e1;
     border-color: #7ce3e1;
-  }
-  
-  .result-card-button > a {
+}
+
+.result-card-button>a {
     text-decoration: none;
     color: #000;
-  }
-  
-  .result-card-button:hover {
+}
+
+.result-card-button:hover {
     background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
-  }
-  
-  .load-cards__button {
+}
+
+.load-cards__button {
     width: 24em;
     height: 3.5em;
     background-color: #5970ff;
     border-color: #5970ff;
-  
+
     color: #fff;
-    font-family: "Inter";
+    font-family: inter;
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.88px;
-  }
-  
-  
-  .load-cards__button:hover {
+}
+
+
+.load-cards__button:hover {
     background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
-  }
-  
-  .test{
+}
+
+.test {
     height: 618px;
     overflow: hidden;
     margin-bottom: 20px;
-  
-  }
-  
-  .slider-container{
+
+}
+
+.slider-container {
     display: flex;
     flex-direction: row;
-  }
-  
-  
-  
-  
-  
-  @media screen and (max-width: 720px) {
+}
+
+
+
+
+
+@media screen and (max-width: 720px) {
     .document-card-container {
-      width: 100%;
+        width: 100%;
     }
-  
+
     .result-card {
-      padding: 0;
-      margin-bottom: 1em;
+        padding: 0;
+        margin-bottom: 1em;
     }
-  
+
     .result-page__container {
-      padding: 1em;
+        padding: 1em;
     }
-  
+
     .result-page__top-container {
-      flex-direction: column;
+        flex-direction: column;
     }
-  
+
     .result-page__cards-container {
-      flex-direction: column;
+        flex-direction: column;
     }
+
     .result-page__icon {
-      width: 100%;
+        width: 100%;
+        
     }
-  
+
     .result-page__title-box {
-      padding: 0;
+        padding: 0;
     }
-  
+
     .result-page__title {
-      margin-bottom: 1em;
-      font-size: 1.5em;
+        margin-bottom: 1em;
+        font-size: 1.5em;
     }
-  
+
     .result-page__subtitle {
-      padding: 0;
+        padding: 0;
     }
+
     .result-page__mid-title {
-      margin-top: 2em;
-      font-size: 1.5em;
+        margin-top: 2em;
+        font-size: 1.5em;
     }
-  
+
     .result-card__head-text {
-      font-size: 14px;
+        font-size: 14px;
     }
-  
+
     .result-card__title {
-      font-size: 19px;
+        font-size: 19px;
     }
+
     .result-card__text {
-      font-size: 12px;
+        font-size: 12px;
     }
-  }
+}
