--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -6,21 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
 @font-face {
-  font-family: 'ferry_black';
-  src: local('ferry_black'),
-    url('./fonts/ferry_black.otf') format('truetype');
-  font-weight: 900;
+  font-family: ferry_black;
+  src: url(./fonts1/ferry_black.otf);
 }
-
 #root {
   max-width:1440px;
   height: 100%;
-  /* background: #000; */
 }
